# job_search_mcp

./: .env.example  .gitignore  PROJECT.md  PROJECT_STRUCTURE.md  README.md  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  api.ts  styles.css
job_search_mcp/: __init__.py  api.py  background_sync.py  cli.py  embeddings.py  frontend.py  llm.py  mcp_server.py  models.py  settings.py  storage.py  vector_index.py
job_search_mcp/services/: __init__.py  ingestion.py  jobs.py  mcp_tools.py  sources.py
tests/: test_api.py  test_core.py
