[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-search-mcp"
version = "0.1.0"
description = "Agentic job intelligence platform with MCP and RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "openai>=1.60.0",
    "pymupdf>=1.24.0",
    "qdrant-client>=1.13.0",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]

[project.scripts]
job-search-mcp = "job_search_mcp.cli:main"

[tool.uv]
package = true
